        - Rebuild: Merged DMD 2.007.
        - Rebuild: rebuild_choosedc now works when installed to /usr/bin (see
          ticket #143).
        - Added an RPM specfile (see ticket #144).
        - Rebuild now supports the -debuglib and -defaultlib flags.
        - DSSS will no longer try to build if no config file is specified and
          no file are specified on the command line.

0.73 from 0.72:
        - Rebuild: Merged DMD 2.003.
        - Improved incremental build speed.
        - Fixed excludes to work with a larger variety of paths (see ticket #126).
        - Added a warning for targets containing no files.
        - Fixed a hang in rebuild with unmatched braces (see ticket #129).
        - Object files are now put in compiler-specific directories (see
          ticket #128).
        - installdir hook command now manifests properly.
        - 'include' setting, counter to 'exclude' (see ticket #111).
        - Now throws an exception if a hook command fails, rather than
          exiting. This allows DSSS to clean up after itself more effectively.

0.72 from 0.71:
        - More DMD fixes - now always compiles one file at a time.
        - Fixed -version=OSXUniversalBinary (see ticket #121).

0.71 from 0.70:
        - Much-improved README.software_engineers.
        - Fixed 'set' and 'add' commands (see ticket #102).
        - Added 'error' and 'warn' hook commands (see ticket #103).
        - Added 'binstall' subcommand (see ticket #105).
        - Added 'noinstall' setting (see ticket #106).
        - `dsss install` now installs .di files in libraries (see ticket #92).
        - Added 'installdir' hook command (see ticket #84).
        - Rebuild: Should now handle non-DMD compilers derived from DMD more
          easily (see ticket #115).
        - Rebuild: Fixed configuration's "include" option (see ticket #116).
        - Rebuild: Fixed a crash bug with the highly-uncommon pragmas
          containing declarations (see ticket #117).