@@ -1,3 +1,7 @@
 name = bin
 
 [bin.d]
+
+[bin.d+stupid]
+target=stupid
+buildflags=-version=stupid
